--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
-@use "_animations.scss";
-@use "_variables.scss";
-@use "_mixins.scss";
-@use "_global.scss";
-@use "_normalize.scss";
+@use "_animations";
+@use "_variables";
+@use "_mixins";
+@use "_global";
+@use "_normalize";
